# dci-module-ppn-node

./: CMakeLists.txt
etc/: ppn-node.conf.example
idl/ppn/: node.idl
idl/ppn/node/: feature.idl
src/: entry.cpp  node.cpp  node.hpp  pch.hpp
src/node/: daemon.cpp  daemon.hpp  netEnumerator.cpp  netEnumerator.hpp  transportHub.hpp  utils.cpp  utils.hpp
test/: probe.cpp
